--- a/connectWithAssistant.html
+++ b/connectWithAssistant.html
@@ -8,8 +8,7 @@
   <!-- Include Marked.js from CDN for Markdown parsing -->
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script>
-    const OPENAI_API_KEY = process.env.OPENAI_API_KEY // Replace with your API Key
-    const ASSISTANT_ID = process.env.YOUR_ASSISTANT_ID        // Replace with your Assistant ID
+      // Replace with your Assistant ID
 
     async function sendMessage() {
       const userMessage = document.getElementById("user-input").value;
