--- a/connectWithAssistant.html
+++ b/connectWithAssistant.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Suspect Interrogation</title>
+  <title>Interactive Games 360: Arlington Heist</title>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script>
     async function sendMessage() {
@@ -44,7 +44,7 @@
 </head>
 
 <body>
-  <h2>OpenAI Assistant</h2>
+  <h2>Suspect Interrogation</h2>
   <div id="chat-box"></div>
   <input type="text" id="user-input" placeholder="Type your message here..." />
   <button onclick="sendMessage()">Send</button>
