--- a/connectWithAssistant.html
+++ b/connectWithAssistant.html
@@ -1,56 +1,126 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Interactive Games 360: Arlington Heist</title>
-  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-  <script>
-     let threadId = localStorage.getItem("threadId") || null;  // ✅ Store threadId in localStorage
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AI Chat Assistant</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f4f4f4;
+            text-align: center;
+            margin: 20px;
+        }
+        #chat-container {
+            width: 400px;
+            max-width: 100%;
+            margin: auto;
+            background: white;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        #chat-box {
+            height: 300px;
+            overflow-y: auto;
+            padding: 10px;
+            border: 1px solid #ddd;
+            background: #fafafa;
+            margin-bottom: 10px;
+        }
+        .user-message, .ai-message {
+            padding: 8px;
+            margin: 5px 0;
+            border-radius: 5px;
+        }
+        .user-message {
+            background: #007bff;
+            color: white;
+            text-align: right;
+        }
+        .ai-message {
+            background: #ddd;
+            text-align: left;
+        }
+        #user-input {
+            width: 80%;
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+        #send-btn {
+            padding: 10px;
+            background: #28a745;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        #send-btn:disabled {
+            background: gray;
+            cursor: not-allowed;
+        }
+    </style>
+ <script>
+  let threadId = localStorage.getItem("threadId") || null;
 
 async function sendMessage() {
-  const userInput = document.getElementById("user-input");
-  const chatBox = document.getElementById("chat-box");
-  const userMessage = userInput.value.trim();
+    const userInput = document.getElementById("user-input").value.trim();
+    if (!userInput) return;
 
-  if (!userMessage) return;
+    // Disable button while sending request
+    const sendBtn = document.getElementById("send-btn");
+    sendBtn.disabled = true;
 
-  chatBox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`;
-  userInput.value = "";
+    // Append user message to chat box
+    appendMessage("user", userInput);
+    document.getElementById("user-input").value = "";
 
-  try {
-    const response = await fetch("/api/openai", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ userMessage, threadId }),  // ✅ Send threadId with request
-    });
+    try {
+        const response = await fetch("https://your-backend-url/api/openai", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ userMessage: userInput, threadId }),
+        });
 
-    if (!response.ok) {
-      throw new Error(await response.text());
+        if (!response.ok) throw new Error(`Server error: ${response.statusText}`);
+
+        const data = await response.json();
+        threadId = data.threadId; // Store thread ID for continuity
+        localStorage.setItem("threadId", threadId);
+
+        // Append AI response
+        appendMessage("ai", data.result || "No response from AI.");
+    } catch (error) {
+        console.error("Chat Error:", error);
+        appendMessage("ai", "Error: Unable to get response. Please try again.");
     }
 
-    const data = await response.json();
-    const assistantMessage = data.result || "No response received.";
-    threadId = data.threadId;  // ✅ Update threadId
-    localStorage.setItem("threadId", threadId);  // ✅ Store it for future messages
-
-    chatBox.innerHTML += `<p><strong>Assistant:</strong> ${assistantMessage}</p>`;
-  } catch (error) {
-    console.error("Error:", error);
-    chatBox.innerHTML += `<p><strong>Error:</strong> ${error.message}</p>`;
-  }
+    // Re-enable button
+    sendBtn.disabled = false;
 }
 
+function appendMessage(sender, text) {
+    const chatBox = document.getElementById("chat-box");
+    const messageDiv = document.createElement("div");
+    messageDiv.className = sender === "user" ? "user-message" : "ai-message";
+    messageDiv.textContent = text;
+    chatBox.appendChild(messageDiv);
+    chatBox.scrollTop = chatBox.scrollHeight;
+}
 
-  </script>
+ </script>
 </head>
-
 <body>
-  <h2>Suspect Interrogation</h2>
-  <div id="chat-box"></div>
-  <input type="text" id="user-input" placeholder="Type your message here..." />
-  <button onclick="sendMessage()">Send</button>
-</body>
 
+<div id="chat-container">
+    <h2>AI Chat Assistant</h2>
+    <div id="chat-box"></div>
+    <input type="text" id="user-input" placeholder="Type a message...">
+    <button id="send-btn" onclick="sendMessage()">Send</button>
+</div>
+
+
+
+</body>
 </html>
