--- a/connectWithAssistant.html
+++ b/connectWithAssistant.html
@@ -77,7 +77,7 @@ async function sendMessage() {
     document.getElementById("user-input").value = "";
 
     try {
-        const response = await fetch("https://your-backend-url/api/openai", {
+        const response = await fetch("/api/openai", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ userMessage: userInput, threadId }),
