--- a/connectWithAssistant.html
+++ b/connectWithAssistant.html
@@ -5,134 +5,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Chat Assistant</title>
     <style>
-        * {
+       * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Arial', sans-serif;
         }
-
         body {
-            background: #f0f2f5;
+            background: url('https://www.transparenttextures.com/patterns/aged-paper.png');
+            font-family: 'Special Elite', cursive;
+            color: #333;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             padding: 20px;
         }
-
         #chat-container {
             width: 100%;
-            max-width: 450px;
-            background: #fff;
-            border-radius: 12px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-            display: flex;
-            flex-direction: column;
-            overflow: hidden;
+            max-width: 500px;
+            background: rgba(255, 255, 240, 0.95);
+            border: 2px solid #333;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
         }
-
         #chat-header {
-            background: #007bff;
-            color: #fff;
-            padding: 15px;
             text-align: center;
-            font-size: 18px;
+            font-size: 22px;
             font-weight: bold;
+            padding-bottom: 10px;
+            border-bottom: 2px dashed #333;
         }
-
         #chat-box {
-            flex: 1;
-            padding: 15px;
+            height: 350px;
             overflow-y: auto;
-            max-height: 400px;
-            background: #f9f9f9;
+            padding: 15px;
+            background: rgba(255, 255, 230, 0.8);
+            border: 1px solid #999;
+            margin: 10px 0;
         }
-
         .message {
             max-width: 80%;
-            padding: 12px;
-            border-radius: 8px;
+            padding: 10px;
+            border-radius: 5px;
             margin: 8px 0;
-            font-size: 14px;
-            line-height: 1.5;
         }
-
         .user-message {
-            background: #007bff;
+            background: #444;
             color: #fff;
             align-self: flex-end;
             text-align: right;
         }
-
         .ai-message {
-            background: #e5e5ea;
-            color: #333;
+            background: #ccc;
             align-self: flex-start;
             text-align: left;
         }
-
         #input-container {
             display: flex;
-            padding: 10px;
-            background: #fff;
-            border-top: 1px solid #ddd;
+            gap: 10px;
         }
-
         #user-input {
             flex: 1;
             padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 20px;
-            outline: none;
-            font-size: 14px;
-            transition: 0.3s;
+            border: 1px solid #555;
+            border-radius: 5px;
+            font-family: 'Special Elite', cursive;
         }
-
-        #user-input:focus {
-            border-color: #007bff;
-        }
-
         #send-btn {
-            background: #007bff;
-            color: #fff;
-            border: none;
             padding: 10px 15px;
-            margin-left: 10px;
-            border-radius: 50%;
+            background: #333;
+            color: white;
+            border: none;
             cursor: pointer;
-            transition: 0.3s;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 16px;
+            border-radius: 5px;
+            font-family: 'Special Elite', cursive;
         }
-
         #send-btn:hover {
-            background: #0056b3;
-        }
-
-        #send-btn:disabled {
-            background: gray;
-            cursor: not-allowed;
-        }
-
-        /* Responsive */
-        @media (max-width: 480px) {
-            #chat-container {
-                width: 100%;
-                max-width: none;
-                border-radius: 0;
-                height: 100vh;
-            }
-
-            #chat-box {
-                max-height: calc(100vh - 100px);
-            }
-
-            #user-input {
-                font-size: 16px;
-            }
+            background: #555;
         }
     </style>
     <script>
