--- a/connectWithAssistant.html
+++ b/connectWithAssistant.html
@@ -85,7 +85,7 @@
             background: #555;
         }
     </style>
-   <script>
+  <script>
     let threadId = localStorage.getItem("threadId") || null;
 
     async function sendMessage() {
@@ -98,38 +98,42 @@
         appendMessage("user", userInput);
         document.getElementById("user-input").value = "";
 
-        try {
-            const response = await fetch("/api/openai", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ userMessage: userInput, threadId }),
-            });
+        let attempts = 3; // Max retries
+        let success = false;
 
-            if (!response.ok) {
-                throw new Error(`Server error: ${response.status} - ${response.statusText}`);
+        while (attempts > 0 && !success) {
+            try {
+                const controller = new AbortController();
+                const timeoutId = setTimeout(() => controller.abort(), 15000); // 15s timeout
+
+                const response = await fetch("/api/openai", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ userMessage: userInput, threadId }),
+                    signal: controller.signal,
+                });
+
+                clearTimeout(timeoutId);
+
+                if (!response.ok) {
+                    throw new Error(`Server error: ${response.status} - ${response.statusText}`);
+                }
+
+                const data = await response.json();
+                threadId = data.threadId;
+                localStorage.setItem("threadId", threadId);
+
+                appendMessage("ai", data.result || "No response from AI.");
+                success = true;
+            } catch (error) {
+                console.error("Chat Error:", error);
+                appendMessage("ai", `Error: ${error.message}. Retrying...`);
+                attempts--;
             }
+        }
 
-            const reader = response.body.getReader();
-            const decoder = new TextDecoder();
-            let aiMessage = "";
-
-            appendMessage("ai", "Thinking..."); // Temporary message
-
-            while (true) {
-                const { done, value } = await reader.read();
-                if (done) break;
-                aiMessage += decoder.decode(value, { stream: true });
-                updateLastMessage("ai", aiMessage);
-            }
-
-            const data = JSON.parse(aiMessage);
-            threadId = data.threadId;
-            localStorage.setItem("threadId", threadId);
-
-            updateLastMessage("ai", data.result || "No response from AI.");
-        } catch (error) {
-            console.error("Chat Error:", error);
-            updateLastMessage("ai", "Error: Unable to get response. Please try again.");
+        if (!success) {
+            appendMessage("ai", "Error: Server is not responding. Please try again later.");
         }
 
         sendBtn.disabled = false;
@@ -140,22 +144,11 @@
         const messageDiv = document.createElement("div");
         messageDiv.className = sender === "user" ? "message user-message" : "message ai-message";
         messageDiv.textContent = text;
-        messageDiv.dataset.sender = sender;
         chatBox.appendChild(messageDiv);
         chatBox.scrollTop = chatBox.scrollHeight;
     }
-
-    function updateLastMessage(sender, text) {
-        const chatBox = document.getElementById("chat-box");
-        const messages = chatBox.getElementsByClassName("message");
-        for (let i = messages.length - 1; i >= 0; i--) {
-            if (messages[i].dataset.sender === sender) {
-                messages[i].textContent = text;
-                break;
-            }
-        }
-    }
 </script>
+
 
 </head>
 <body>
