--- a/connectWithAssistant.html
+++ b/connectWithAssistant.html
@@ -5,15 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Chatbot</title>
     <style>
-        body { font-family: Arial, sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; background: #f5f5f5; }
-        #chat-container { width: 100%; max-width: 450px; padding: 20px; background: #fff; box-shadow: 0px 4px 8px rgba(0,0,0,0.2); border-radius: 10px; display: flex; flex-direction: column; }
-        #chat-box { height: 300px; overflow-y: auto; padding: 10px; border: 1px solid #ccc; border-radius: 5px; background: #fafafa; flex-grow: 1; }
-        .message { padding: 8px; margin: 5px; border-radius: 5px; max-width: 80%; }
-        .user-message { background: #007bff; color: white; align-self: flex-end; }
-        .ai-message { background: #ddd; align-self: flex-start; }
-        #input-area { display: flex; margin-top: 10px; }
-        #user-input { flex: 1; padding: 10px; border: 1px solid #ccc; border-radius: 5px; }
-        #send-btn { padding: 10px; background: #007bff; color: white; border: none; cursor: pointer; margin-left: 10px; border-radius: 5px; }
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background: linear-gradient(to right, #2c3e50, #4ca1af);
+            color: white;
+        }
+        #chat-container {
+            width: 100%;
+            max-width: 450px;
+            padding: 20px;
+            background: #fff;
+            box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+            color: #333;
+        }
+        #chat-box {
+            height: 400px;
+            overflow-y: auto;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background: #fafafa;
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+        }
+        .message {
+            padding: 8px;
+            margin: 5px;
+            border-radius: 5px;
+            max-width: 80%;
+            font-size: 14px;
+        }
+        .user-message {
+            background: #007bff;
+            color: white;
+            align-self: flex-end;
+        }
+        .ai-message {
+            background: #ddd;
+            align-self: flex-start;
+        }
+        #input-area {
+            display: flex;
+            margin-top: 10px;
+        }
+        #user-input {
+            flex: 1;
+            padding: 12px;
+            border: none;
+            border-radius: 5px;
+            outline: none;
+            font-size: 14px;
+        }
+        #send-btn {
+            padding: 12px;
+            background: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+            margin-left: 10px;
+            border-radius: 5px;
+            transition: 0.3s;
+        }
+        #send-btn:hover {
+            background: #0056b3;
+        }
     </style>
 </head>
 <body>
