--- a/connectWithAssistant.html
+++ b/connectWithAssistant.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Chatbot</title>
+    <title>AI Chat Assistant</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,82 +11,51 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
-            background: linear-gradient(to right, #2c3e50, #4ca1af);
-            color: white;
+            background: #f4f4f4;
         }
         #chat-container {
             width: 100%;
-            max-width: 450px;
-            padding: 20px;
-            background: #fff;
-            box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+            max-width: 500px;
+            background: white;
             border-radius: 10px;
-            display: flex;
-            flex-direction: column;
-            color: #333;
+            padding: 15px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         }
         #chat-box {
             height: 400px;
             overflow-y: auto;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            background: #fafafa;
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
+            border-bottom: 1px solid #ddd;
+            padding-bottom: 10px;
         }
         .message {
-            padding: 8px;
+            padding: 10px;
             margin: 5px;
             border-radius: 5px;
             max-width: 80%;
-            font-size: 14px;
         }
-        .user-message {
-            background: #007bff;
-            color: white;
-            align-self: flex-end;
-        }
-        .ai-message {
-            background: #ddd;
-            align-self: flex-start;
-        }
-        #input-area {
+        .user-message { background: #007bff; color: white; text-align: right; }
+        .ai-message { background: #ddd; text-align: left; }
+        #input-container {
             display: flex;
             margin-top: 10px;
         }
-        #user-input {
-            flex: 1;
-            padding: 12px;
+        input, button {
+            padding: 10px;
             border: none;
             border-radius: 5px;
-            outline: none;
-            font-size: 14px;
         }
-        #send-btn {
-            padding: 12px;
-            background: #007bff;
-            color: white;
-            border: none;
-            cursor: pointer;
-            margin-left: 10px;
-            border-radius: 5px;
-            transition: 0.3s;
-        }
-        #send-btn:hover {
-            background: #0056b3;
-        }
+        input { flex: 1; border: 1px solid #ccc; }
+        button { background: #007bff; color: white; cursor: pointer; }
+        button:hover { background: #0056b3; }
     </style>
 </head>
 <body>
 
 <div id="chat-container">
     <div id="chat-box"></div>
-    <div id="input-area">
-        <input type="text" id="user-input" placeholder="Type a message..." onkeypress="if(event.key==='Enter') sendMessage()">
-        <button id="send-btn" onclick="sendMessage()">Send</button>
+    <div id="input-container">
+        <input type="text" id="user-input" placeholder="Type a message...">
+        <button onclick="sendMessage()">Send</button>
     </div>
 </div>
 
@@ -97,29 +66,27 @@
         const userInput = document.getElementById("user-input").value.trim();
         if (!userInput) return;
 
-        appendMessage("user", userInput);
         document.getElementById("user-input").value = "";
+        appendMessage("user", userInput);
 
-        const response = await fetch("/api/openai", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ userMessage: userInput, threadId }),
-        });
+        try {
+            const response = await fetch("/api/openai", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ userMessage: userInput, threadId }),
+            });
 
-        const data = await response.json();
-        threadId = data.threadId;
-        localStorage.setItem("threadId", threadId);
-
-        appendMessage("ai", data.result || "No response.");
+            const data = await response.json();
+            threadId = data.threadId;
+            localStorage.setItem("threadId", threadId);
+            appendMessage("ai", data.result);
+        } catch {
+            appendMessage("ai", "Error. Please try again.");
+        }
     }
 
     function appendMessage(sender, text) {
-        const chatBox = document.getElementById("chat-box");
-        const messageDiv = document.createElement("div");
-        messageDiv.className = `message ${sender}-message`;
-        messageDiv.textContent = text;
-        chatBox.appendChild(messageDiv);
-        chatBox.scrollTop = chatBox.scrollHeight;
+        document.getElementById("chat-box").innerHTML += `<div class="message ${sender}-message">${text}</div>`;
     }
 </script>
 
