--- a/connectWithAssistant.html
+++ b/connectWithAssistant.html
@@ -54,40 +54,68 @@
         }
     </style>
     <script>
-        let threadId = localStorage.getItem("threadId") || null;
+    let threadId = localStorage.getItem("threadId") || null;
 
-        async function sendMessage() {
-            const userInput = document.getElementById("user-input").value.trim();
-            if (!userInput) return;
+    async function sendMessage() {
+        const userInput = document.getElementById("user-input").value.trim();
+        if (!userInput) return;
 
-            appendMessage("user", userInput);
-            document.getElementById("user-input").value = "";
+        const sendBtn = document.getElementById("send-btn");
+        sendBtn.disabled = true;
+        appendMessage("user", userInput);
+        document.getElementById("user-input").value = "";
 
+        let attempts = 3; // Retry 3 times
+        let success = false;
+
+        while (attempts > 0 && !success) {
             try {
+                const controller = new AbortController();
+                const timeoutId = setTimeout(() => controller.abort(), 15000);
+
                 const response = await fetch("/api/openai", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ userMessage: userInput, threadId }),
+                    signal: controller.signal,
                 });
 
+                clearTimeout(timeoutId);
+
+                if (!response.ok) {
+                    throw new Error(`Server error: ${response.status} - ${response.statusText}`);
+                }
+
                 const data = await response.json();
-                threadId = data.threadId;
+                threadId = data.threadId || threadId;
                 localStorage.setItem("threadId", threadId);
-                appendMessage("ai", data.result);
+
+                appendMessage("ai", data.result || "No response from AI.");
+                success = true;
             } catch (error) {
-                appendMessage("ai", "Error. Please try again.");
+                console.error("Chat Error:", error);
+                appendMessage("ai", `Error: ${error.message}. Retrying...`);
+                attempts--;
             }
         }
 
-        function appendMessage(sender, text) {
-            const chatBox = document.getElementById("chat-box");
-            const messageDiv = document.createElement("div");
-            messageDiv.className = sender === "user" ? "message user-message" : "message ai-message";
-            messageDiv.textContent = text;
-            chatBox.appendChild(messageDiv);
-            chatBox.scrollTop = chatBox.scrollHeight;
+        if (!success) {
+            appendMessage("ai", "Error: Server is not responding. Please try again later.");
         }
-    </script>
+
+        sendBtn.disabled = false;
+    }
+
+    function appendMessage(sender, text) {
+        const chatBox = document.getElementById("chat-box");
+        const messageDiv = document.createElement("div");
+        messageDiv.className = sender === "user" ? "message user-message" : "message ai-message";
+        messageDiv.textContent = text;
+        chatBox.appendChild(messageDiv);
+        chatBox.scrollTop = chatBox.scrollHeight;
+    }
+</script>
+
 </head>
 <body>
 <div id="chat-container">
