--- a/connectWithAssistant.html
+++ b/connectWithAssistant.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,6 +12,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            margin: 0;
         }
         #chat-container {
             width: 100%;
@@ -19,21 +20,32 @@
             background: white;
             padding: 20px;
             border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
         }
         #chat-box {
             height: 400px;
             overflow-y: auto;
             padding: 10px;
             border: 1px solid #ddd;
+            background: #fff;
         }
         .message {
             padding: 10px;
             border-radius: 5px;
             margin: 5px 0;
+            max-width: 80%;
         }
-        .user-message { background: #007bff; color: white; text-align: right; }
-        .ai-message { background: #ddd; text-align: left; }
+        .user-message {
+            background: #007bff;
+            color: white;
+            text-align: right;
+            align-self: flex-end;
+        }
+        .ai-message {
+            background: #ddd;
+            text-align: left;
+            align-self: flex-start;
+        }
         #input-container {
             display: flex;
             margin-top: 10px;
@@ -51,79 +63,65 @@
             border: none;
             cursor: pointer;
             margin-left: 10px;
+            border-radius: 5px;
+        }
+        #send-btn:disabled {
+            background: #aaa;
+            cursor: not-allowed;
         }
     </style>
+</head>
+<body>
+    <div id="chat-container">
+        <div id="chat-box"></div>
+        <div id="input-container">
+            <input type="text" id="user-input" placeholder="Type a message...">
+            <button id="send-btn" onclick="sendMessage()">Send</button>
+        </div>
+    </div>
+
     <script>
-    let threadId = localStorage.getItem("threadId") || null;
+        let threadId = localStorage.getItem("threadId") || null;
 
-    async function sendMessage() {
-        const userInput = document.getElementById("user-input").value.trim();
-        if (!userInput) return;
+        async function sendMessage() {
+            const userInput = document.getElementById("user-input").value.trim();
+            if (!userInput) return;
 
-        const sendBtn = document.getElementById("send-btn");
-        sendBtn.disabled = true;
-        appendMessage("user", userInput);
-        document.getElementById("user-input").value = "";
+            const sendBtn = document.getElementById("send-btn");
+            sendBtn.disabled = true;
+            appendMessage("user", userInput);
+            document.getElementById("user-input").value = "";
 
-        let attempts = 3; // Retry 3 times
-        let success = false;
-
-        while (attempts > 0 && !success) {
             try {
-                const controller = new AbortController();
-                const timeoutId = setTimeout(() => controller.abort(), 15000);
-
                 const response = await fetch("/api/openai", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ userMessage: userInput, threadId }),
-                    signal: controller.signal,
                 });
 
-                clearTimeout(timeoutId);
-
-                if (!response.ok) {
-                    throw new Error(`Server error: ${response.status} - ${response.statusText}`);
-                }
+                if (!response.ok) throw new Error(`Server error: ${response.statusText}`);
 
                 const data = await response.json();
                 threadId = data.threadId || threadId;
                 localStorage.setItem("threadId", threadId);
 
                 appendMessage("ai", data.result || "No response from AI.");
-                success = true;
             } catch (error) {
                 console.error("Chat Error:", error);
-                appendMessage("ai", `Error: ${error.message}. Retrying...`);
-                attempts--;
+                appendMessage("ai", "Error: Unable to fetch response.");
             }
+
+            sendBtn.disabled = false;
         }
 
-        if (!success) {
-            appendMessage("ai", "Error: Server is not responding. Please try again later.");
+        function appendMessage(sender, text) {
+            const chatBox = document.getElementById("chat-box");
+            const messageDiv = document.createElement("div");
+            messageDiv.className = sender === "user" ? "message user-message" : "message ai-message";
+            messageDiv.textContent = text;
+            chatBox.appendChild(messageDiv);
+            chatBox.scrollTop = chatBox.scrollHeight;
         }
-
-        sendBtn.disabled = false;
-    }
-
-    function appendMessage(sender, text) {
-        const chatBox = document.getElementById("chat-box");
-        const messageDiv = document.createElement("div");
-        messageDiv.className = sender === "user" ? "message user-message" : "message ai-message";
-        messageDiv.textContent = text;
-        chatBox.appendChild(messageDiv);
-        chatBox.scrollTop = chatBox.scrollHeight;
-    }
-</script>
-
-</head>
-<body>
-<div id="chat-container">
-    <div id="chat-box"></div>
-    <div id="input-container">
-        <input type="text" id="user-input" placeholder="Type a message...">
-        <button id="send-btn" onclick="sendMessage()">Send</button>
-    </div>
-</div>
+    </script>
 </body>
 </html>
