--- a/connectWithAssistant.html
+++ b/connectWithAssistant.html
@@ -53,7 +53,7 @@
             margin-left: 10px;
         }
     </style>
-    <script>
+    <script defer>
     let threadId = localStorage.getItem("threadId") || null;
 
     async function sendMessage() {
